test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_or_op.draco
proc main() void : a := a or b; corp;

