test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_incase_as_identifier.draco
int incase;
 
proc main() void : a := 1; corp;
